--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": "14.15.2",
     "npm": "6.14.9"
   },
-  "author": "Jayant Gogoi",
+  "author": "Kaumar Yadav",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -24,7 +24,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.13",
     "multer": "^1.4.2",
-    "ts-node": "^10.9.2",
     "twilio": "^3.66.0"
   },
   "devDependencies": {
@@ -34,6 +33,7 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/multer": "^1.4.7",
     "nodemon": "^2.0.6",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
   }
