--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",                        
-    "module": "commonjs",
+    "target": "ES6",                        
+    "module": "CommonJS",
     "lib": ["DOM", "ES6", "ESNext.AsyncIterable"],
     "sourceMap": true,
     "outDir": "./dist",
