--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-  "name": "food_order_backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon src/index.ts",
-    "start": "node dist/index.js",
-    "build": "tsc -p .",
-    "postinstall": "npm run build"
-  },
-  "engines": {
-    "node": "14.15.2",
-    "npm": "6.14.9"
-  },
-  "author": "Kaumar Yadav",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.0",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "dotenv-safe": "^9.1.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.13",
-    "multer": "^1.4.2",
-    "twilio": "^3.66.0"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.8",
-    "@types/jsonwebtoken": "^8.5.4",
-    "@types/multer": "^1.4.7",
-    "nodemon": "^2.0.6",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^1.0.0",
-    "typescript": "^4.0.5"
-  }
+    "name": "food_order_backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon src/server.ts",
+        "start": "node dist/server.js",
+        "build": "tsc -p .",
+        "postinstall": "npm run build"
+    },
+    "engines": {
+        "node": "14.15.2",
+        "npm": "6.14.9"
+    },
+    "author": "Kaumar Yadav",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.0.0",
+        "class-transformer": "^0.4.0",
+        "class-validator": "^0.13.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "dotenv-safe": "^9.1.0",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.10.13",
+        "multer": "^1.4.2",
+        "twilio": "^3.66.0"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
+        "@types/cors": "^2.8.8",
+        "@types/express": "^4.17.8",
+        "@types/jsonwebtoken": "^8.5.4",
+        "@types/multer": "^1.4.7",
+        "nodemon": "^2.0.6",
+        "ts-node": "^10.9.2",
+        "ts-node-dev": "^1.0.0",
+        "typescript": "^4.0.5"
+    }
 }
