--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "bcrypt": "^5.0.0",
         "class-transformer": "^0.4.0",
         "class-validator": "^0.13.1",
+        "cloudinary": "^2.4.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "dotenv-safe": "^9.1.0",
@@ -26,7 +27,8 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.13",
         "multer": "^1.4.2",
-        "twilio": "^3.66.0"
+        "twilio": "^3.66.0",
+        "uuid": "^10.0.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
