--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.13",
         "multer": "^1.4.2",
+        "node-mailjet": "^6.0.5",
         "twilio": "^3.66.0",
         "uuid": "^10.0.0"
     },
