--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "mongoose": "^5.10.13",
         "multer": "^1.4.2",
         "node-mailjet": "^6.0.5",
+        "stripe": "^16.6.0",
         "twilio": "^3.66.0",
         "uuid": "^10.0.0"
     },
