--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
         "multer": "^1.4.2",
         "node-mailjet": "^6.0.5",
         "stripe": "^16.6.0",
+        "swagger-ui-express": "^5.0.1",
         "twilio": "^3.66.0",
-        "uuid": "^10.0.0"
+        "uuid": "^10.0.0",
+        "yamljs": "^0.3.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
