implemented best practices and added services - more pending

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        // "dev": "nodemon src/server.ts",
-        "dev": "nodemon",
+        "dev": "nodemon src/server.ts",
         "start": "node --inspect dist/server.js",
         "build": "tsc -p .",
         "postinstall": "npm run build"
@@ -26,7 +25,10 @@
         "dotenv": "^16.4.5",
         "dotenv-safe": "^9.1.0",
         "express": "^4.19.2",
+        "helmet": "^7.1.0",
+        "http-errors": "^2.0.0",
         "jsonwebtoken": "^8.5.1",
+        "libphonenumber-js": "^1.11.5",
         "mongoose": "^5.10.13",
         "multer": "^1.4.2",
         "node-mailjet": "^6.0.5",
@@ -34,6 +36,7 @@
         "swagger-ui-express": "^5.0.1",
         "twilio": "^3.66.0",
         "uuid": "^10.0.0",
+        "winston": "^3.13.1",
         "yamljs": "^0.3.0"
     },
     "devDependencies": {
