--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,23 @@
-// Todo
-// Setting up Redis and MongoDB with Docker Compose
-// Connect to Redis Docker Container
+services:
+  app:
+    build: .
+    ports:
+      - '3000:3000'
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    environment:
+      - NODE_ENV=development
+    depends_on:
+      - mongo
+
+  mongo:
+    image: mongo:6.0
+    container_name: mongodb
+    ports:
+      - '27017:27017'
+    volumes:
+      - mongo-data:/data/db
+
+volumes:
+  mongo-data:
