--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
-    "name": "food_order_backend",
+    "name": "food-order-api-service",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "src/server.ts",
     "scripts": {
-        "dev": "nodemon src/server.ts",
-        "start": "node --inspect dist/server.js",
-        "build": "tsc -p .",
-        "postinstall": "npm run build"
-    },
-    "engines": {
-        "node": "14.15.2",
-        "npm": "6.14.9"
+        "dev": "npx nodemon src/server.ts",
+        "build": "npx tsc",
+        "start": "node dist/src/server.js"
     },
     "author": "Kaumar Yadav",
     "license": "ISC",
     "dependencies": {
-        "@types/express": "^4.17.21",
         "bcrypt": "^5.0.0",
         "class-transformer": "^0.4.0",
         "class-validator": "^0.13.1",
         "cloudinary": "^2.4.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "dotenv-safe": "^9.1.0",
         "express": "^4.19.2",
         "helmet": "^7.1.0",
         "http-errors": "^2.0.0",
@@ -35,6 +28,7 @@
         "stripe": "^16.6.0",
         "swagger-ui-express": "^5.0.1",
         "twilio": "^3.66.0",
+        "typescript": "^4.9.5",
         "uuid": "^10.0.0",
         "winston": "^3.13.1",
         "yamljs": "^0.3.0"
@@ -42,11 +36,15 @@
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
         "@types/cors": "^2.8.8",
+        "@types/dotenv-safe": "^8.1.6",
+        "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^8.5.4",
         "@types/multer": "^1.4.11",
+        "@types/swagger-ui-express": "^4.1.6",
+        "@types/yamljs": "^0.2.34",
+        "dotenv-safe": "^9.1.0",
         "nodemon": "^2.0.6",
         "ts-node": "^10.9.2",
-        "ts-node-dev": "^1.0.0",
-        "typescript": "^4.9.5"
+        "ts-node-dev": "^1.1.8"
     }
 }
