--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,23 @@
 {
-  "compilerOptions": {
-    "target": "ES6",                        
-    "module": "CommonJS",
-    "lib": ["DOM", "ES6", "ESNext.AsyncIterable"],
-    "sourceMap": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "strictPropertyInitialization": false
-  }
+    "compilerOptions": {
+        "experimentalDecorators": true,
+        "module": "commonjs",
+        "rootDir": "./",
+        "outDir": "./dist",
+        "esModuleInterop": true,
+        "allowJs": false,
+        "target": "es6",
+        "forceConsistentCasingInFileNames": false,
+        "noImplicitReturns": true,
+        "strict": false,
+        "noUnusedLocals": false,
+        "resolveJsonModule": true,
+        "sourceMap": true,
+        "typeRoots": ["types", "./node_modules/@types"],
+        "strictPropertyInitialization": false,
+        "allowSyntheticDefaultImports": true
+    },
+    "compileOnSave": false,
+    "include": ["./sec/**/*", "./src/app.ts", "./src/server.ts", "package.json"],
+    "exclude": ["node_modules", "dist", "tests"]
 }
