--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.0.0",
+        "bcryptjs": "^2.4.3",
         "class-transformer": "^0.4.0",
         "class-validator": "^0.13.1",
         "cloudinary": "^2.4.0",
@@ -23,29 +24,37 @@
         "http-errors": "^2.0.0",
         "jsonwebtoken": "^8.5.1",
         "libphonenumber-js": "^1.11.5",
-        "mongoose": "^5.10.13",
+        "mongoose": "^5.13.22",
         "multer": "^1.4.2",
         "node-mailjet": "^6.0.5",
+        "passport": "^0.7.0",
+        "passport-facebook": "^3.0.0",
+        "passport-google-oauth20": "^2.0.0",
         "stripe": "^16.6.0",
         "swagger-ui-express": "^5.0.1",
         "twilio": "^3.66.0",
-        "typescript": "^4.9.5",
         "uuid": "^10.0.0",
         "winston": "^3.13.1",
         "yamljs": "^0.3.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
+        "@types/bcryptjs": "^2.4.6",
         "@types/cors": "^2.8.8",
         "@types/dotenv-safe": "^8.1.6",
         "@types/express": "^4.17.21",
-        "@types/jsonwebtoken": "^8.5.4",
+        "@types/jsonwebtoken": "^8.5.9",
+        "@types/mongoose": "^5.11.96",
         "@types/multer": "^1.4.11",
+        "@types/passport": "^1.0.16",
+        "@types/passport-facebook": "^3.0.3",
+        "@types/passport-google-oauth20": "^2.0.16",
         "@types/swagger-ui-express": "^4.1.6",
         "@types/yamljs": "^0.2.34",
         "dotenv-safe": "^9.1.0",
         "nodemon": "^2.0.6",
         "ts-node": "^10.9.2",
-        "ts-node-dev": "^1.1.8"
+        "ts-node-dev": "^1.1.8",
+        "typescript": "^5.5.4"
     }
 }
