--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "google-auth-library": "^9.14.0",
         "helmet": "^7.1.0",
         "http-errors": "^2.0.0",
         "jsonwebtoken": "^8.5.1",
