--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cSpell.words": ["authorised", "dfrl", "googleusercontent", "libphonenumber", "Preferenceschema", "vvbbhtsibkssjpe"]
+    "cSpell.words": ["authorised", "dfrl", "googleusercontent", "libphonenumber", "Preferenceschema", "vvbbhtsibkssjpe"],
 }
