--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "npx nodemon src/server.ts",
         "start:dev": "nodemon --exec 'node --inspect=0.0.0.0:9229' src/server.ts",
-        "build": "npx tsc",
+        "build": "npx tsc --build",
         "start": "node dist/src/server.js"
     },
     "author": "Kaumar Yadav",
