--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "class-transformer": "^0.4.0",
         "class-validator": "^0.13.1",
         "cloudinary": "^2.4.0",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "google-auth-library": "^9.14.0",
